@@ -1,11 +1,9 @@
 package ru.practicum.ewm.exception;
 
-import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
-import org.springframework.web.bind.MissingServletRequestParameterException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -13,6 +11,7 @@ import org.springframework.web.method.annotation.MethodArgumentTypeMismatchExcep
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 @Slf4j
@@ -61,50 +60,12 @@ public class ErrorHandler {
         List<String> errors = e.getBindingResult().getFieldErrors().stream()
                 .map(fe -> String.format("Field: %s. Error: %s. Value: %s",
                         fe.getField(), fe.getDefaultMessage(), fe.getRejectedValue()))
-                .toList();
+                .collect(Collectors.toList());
         return ErrorResponse.builder()
                 .status(HttpStatus.BAD_REQUEST.name())
                 .reason("Incorrectly made request.")
                 .message(errors.isEmpty() ? "Validation failed" : errors.get(0))
                 .errors(errors)
-                .timestamp(LocalDateTime.now())
-                .build();
-    }
-
-    @ExceptionHandler(ConstraintViolationException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleConstraintViolation(final ConstraintViolationException e) {
-        log.warn("400: {}", e.getMessage());
-        return ErrorResponse.builder()
-                .status(HttpStatus.BAD_REQUEST.name())
-                .reason("Incorrectly made request.")
-                .message(e.getMessage())
-                .timestamp(LocalDateTime.now())
-                .build();
-    }
-
-    @ExceptionHandler(MissingServletRequestParameterException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleMissingParam(final MissingServletRequestParameterException e) {
-        log.warn("400: {}", e.getMessage());
-        return ErrorResponse.builder()
-                .status(HttpStatus.BAD_REQUEST.name())
-                .reason("Incorrectly made request.")
-                .message(e.getMessage())
-                .timestamp(LocalDateTime.now())
-                .build();
-    }
-
-    @ExceptionHandler(MethodArgumentTypeMismatchException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleTypeMismatch(final MethodArgumentTypeMismatchException e) {
-        log.warn("400: {}", e.getMessage());
-        return ErrorResponse.builder()
-                .status(HttpStatus.BAD_REQUEST.name())
-                .reason("Incorrectly made request.")
-                .message(String.format("Failed to convert value of type %s to required type %s",
-                        e.getValue() != null ? e.getValue().getClass().getSimpleName() : "null",
-                        e.getRequiredType() != null ? e.getRequiredType().getSimpleName() : "unknown"))
                 .timestamp(LocalDateTime.now())
                 .build();
     }
@@ -117,6 +78,19 @@ public class ErrorHandler {
                 .status(HttpStatus.CONFLICT.name())
                 .reason("Integrity constraint has been violated.")
                 .message(e.getMostSpecificCause().getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
+    }
+
+    @ExceptionHandler(MethodArgumentTypeMismatchException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ErrorResponse handleTypeMismatch(final MethodArgumentTypeMismatchException e) {
+        log.warn("400: {}", e.getMessage());
+        return ErrorResponse.builder()
+                .status(HttpStatus.BAD_REQUEST.name())
+                .reason("Incorrectly made request.")
+                .message(String.format("Parameter %s must be of type %s",
+                        e.getName(), e.getRequiredType().getSimpleName()))
                 .timestamp(LocalDateTime.now())
                 .build();
     }
